# homework2

./: CMakeLists.txt  Part5.txt  Part6.txt  README.md  aerospacecontrolsystem.cpp  aerospacecontrolsystem.h  airspeed.cpp  airspeed.h  altitude.cpp  altitude.h  angleofattack.cpp  angleofattack.h  main.cpp  part3.cpp  part3.h  part4.cpp  part4.h  robot.cpp  robot.h  sensor.cpp  sensor.h  sensorfactory.cpp  sensorfactory.h
